commit ReWork Design - rework animepages 2 - add mushoku tensei

--- a/animePages.html
+++ b/animePages.html
@@ -147,9 +147,9 @@
                 <div class="row">
 
                     <!-- #Gambar anime-->
-                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 ">
-                        <img src="img/Anime/Kimi_no_nawa.png" class="img-fluid">
-
+                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 grid-gallery">
+                        <a class="lightbox" href="img/Anime/Kimi_no_nawa.png">
+                        <img src="img/Anime/Kimi_no_nawa.png" class="img-fluid"></a>
                     </div>
                     <!-- #endGambar Anime -->
 
@@ -196,7 +196,7 @@
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Genres</th>
-                                                        <td><a href="#romance">Romance</a>,
+                                                        <td><a href="#Romance">Romance</a>,
                                                             <a href="#Supernatural">Supernatural</a>,
                                                             <a href="#School">School</a>,
                                                             <a href="#Drama">Drama</a>
