--- a/animePagesVioletOva.html
+++ b/animePagesVioletOva.html
@@ -147,9 +147,9 @@
                 <div class="row">
 
                     <!-- #Gambar anime-->
-                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 ">
-                        <img src="img/Anime/violet_ova.png" class="img-fluid">
-
+                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 grid-gallery">
+                        <a class="lightbox" href="img/Anime/violet_ova.png">
+                        <img src="img/Anime/violet_ova.png" class="img-fluid"></a>
                     </div>
                     <!-- #endGambar Anime -->
 
