--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/mushoku_tensei.png">
+                  <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top" src="img/Anime/mushoku_tensei.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Mushoku Tensei: Isekai Ittara Honki
                           Dasu</strong></h6>
@@ -293,7 +293,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
