--- a/animePagesMajoNoTabi.html
+++ b/animePagesMajoNoTabi.html
@@ -147,9 +147,9 @@
                 <div class="row">
 
                     <!-- #Gambar anime-->
-                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 ">
-                        <img src="img/Anime/majo_no_tabi.jpg" class="img-fluid">
-
+                    <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 grid-gallery">
+                        <a class="lightbox" href="img/Anime/majo_no_tabi.jpg">
+                        <img src="img/Anime/majo_no_tabi.jpg" class="img-fluid"></a>
                     </div>
                     <!-- #endGambar Anime -->
 
