commit ReWork Design - trakteer fix

--- a/footFeedback.html
+++ b/footFeedback.html
@@ -217,7 +217,13 @@
                   <div class="collapse show " id="collapseMainDonate">
                     <h2>Donasi</h2>
                     <h4>Trakteer</h4>
-                    <p></p>
+                    <p><a href="https://trakteer.id/serayu">https://trakteer.id/serayu</a></p>
+                    <br>
+                    <h4>BTC</h4>
+                    <p>3NaLstW6vSg5wZYDuEca6MAXoQ8sMEKqej</p>
+                    <br>
+                    <h4>ETH</h4>
+                    <p>0x228CA0EC32d6B66077f4870b6DB3dA0fdE6569b6</p>
                   </div>
 
 
