commit ReWork Design - rework animepages 2 - add toaruT

--- a/listLastestUpdate.html
+++ b/listLastestUpdate.html
@@ -253,7 +253,7 @@
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePages.html" class="myshow"><img class="card-img-top"
-                                            src="img/Anime/toaru_railgun.jpg">
+                                            src="img/Anime/toaru_railgunT.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Toaru Kagaku no
                                                     Railgun</strong></h6>
