--- a/index.html
+++ b/index.html
@@ -318,14 +318,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top" src="img/Anime/horimiya.jpg">
+                  <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top" src="img/Anime/horimiya.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Horimiya</strong></h6>
                       <small class="text-white">Post on 4-02-2020</small>
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -334,14 +334,14 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                  <a href="animePages.html" class="myshow"><img class="card-img-top " src="img/Anime/tenki_no_ko.png">
+                  <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top " src="img/Anime/tenki_no_ko.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Tenki no Ko</strong></h6>
                       <small class="text-white">Post on 1-02-2020</small>
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardMovie -->
