commit ReWork Design - rework animepages 2 Finish - Gallery fix

--- a/gallery.html
+++ b/gallery.html
@@ -170,15 +170,15 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Yuuki Character By yuuki">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/gallery/Yuuki_cr.png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
                                             <a class="lightbox" href="img/Screenshot/KimiNoNawa/Screenshot (316).png" data-caption="Kimi No Nawa">
                                                 <img class="img-fluid image scale-on-hover"
                                                     src="img/Screenshot/KimiNoNawa/Screenshot (316).png">
+                                            </a>
+                                        </div>
+                                        <div class="col-md-6 col-lg-4 item ">
+                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Yuuki Character By yuuki">
+                                                <img class="img-fluid image scale-on-hover"
+                                                    src="img/gallery/Yuuki_cr.png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
@@ -188,39 +188,39 @@
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/Horimiya/ss3.jpg" data-caption="Horimiya">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/Horimiya/ss3.jpg">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/MushokuTensei/Screenshot (68).png" data-caption="Mushoku Tensei">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/MushokuTensei/Screenshot (68).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/KimiNoNawa/Screenshot (331).png" data-caption="Kimi No Nawa">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/KimiNoNawa/Screenshot (331).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1"></a>
+                                            <a class="lightbox" href="img/Screenshot/TenkiNoKo/Screenshot (261).png" data-caption="Tenki No Ko"></a>
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/TenkiNoKo/Screenshot (261).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/VioletOva/Screenshot (343).png" data-caption="Violet Evergarden">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/VioletOva/Screenshot (343).png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/kimi_no_nawa_ss1.jpg" data-caption="Caption 1">
+                                            <a class="lightbox" href="img/Screenshot/ToaruRailgunT/Screenshot (83).png" data-caption="Toaru Railgun T">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/kimi_no_nawa_ss1.jpg">
+                                                    src="img/Screenshot/ToaruRailgunT/Screenshot (83).png">
                                             </a>
                                         </div>
                                     </div>
