commit ReWork Design - Rework Beta finish - bugfix + QOL 1 update

--- a/footFeedback.html
+++ b/footFeedback.html
@@ -176,7 +176,7 @@
                     <p>Atau</p>
                     <ul>
                       <li>
-                        <p>Discord : <a
+                        <p class="text-break ">Discord : <a
                             href="https://discord.com/invite/ycTY2gk9k3">https://discord.com/invite/ycTY2gk9k3</a>
                         </p>
                       </li>
@@ -217,13 +217,13 @@
                   <div class="collapse show " id="collapseMainDonate">
                     <h2>Donasi</h2>
                     <h4>Trakteer</h4>
-                    <p><a href="https://trakteer.id/serayu">https://trakteer.id/serayu</a></p>
+                    <p class="text-break" ><a href="https://trakteer.id/serayu">https://trakteer.id/serayu</a></p>
                     <br>
                     <h4>BTC</h4>
-                    <p>3NaLstW6vSg5wZYDuEca6MAXoQ8sMEKqej</p>
+                    <p class="text-break">3NaLstW6vSg5wZYDuEca6MAXoQ8sMEKqej</p>
                     <br>
                     <h4>ETH</h4>
-                    <p>0x228CA0EC32d6B66077f4870b6DB3dA0fdE6569b6</p>
+                    <p class="text-break">0x228CA0EC32d6B66077f4870b6DB3dA0fdE6569b6</p>
                   </div>
 
 
