--- a/listAnimeList.html
+++ b/listAnimeList.html
@@ -310,7 +310,7 @@
                       <h6 id="H">H</h6>
                       <hr>
                       <ul class="list-group">
-                        <li><a href="#"></a></li>
+                        <li><a href="animePagesHorimiya.html">Horimiya</a></li>
                       </ul>
 
                       <h6 id="I">I</h6>
@@ -328,7 +328,7 @@
                       <h6 id="K">K</h6>
                       <hr>
                       <ul class="list-group">
-                        <li><a href="#"></a></li>
+                        <li><a href="animePagesKimiNoNawa.html">Kimi No Nawa.</a></li>
                       </ul>
 
                       <h6 id="L">L</h6>
@@ -340,7 +340,8 @@
                       <h6 id="M">M</h6>
                       <hr>
                       <ul class="list-group">
-                        <li><a href="#"></a></li>
+                        <li><a href="animePagesMajoNoTabi.html">Majo No Tabitabi</a></li>
+                        <li><a href="animePagesMushokuTensei.html">Mushoku Tensei: Isekai Ittara Honki Dasu</a></li>
                       </ul>
 
                       <h6 id="N">N</h6>
@@ -382,7 +383,7 @@
                       <h6 id="T">T</h6>
                       <hr>
                       <ul class="list-group">
-                        <li><a href="#"></a></li>
+                        <li><a href="animePagesTenkiNoKo.html">Tenki No Ko</a></li>
                       </ul>
 
                       <h6 id="U">U</h6>
@@ -394,7 +395,7 @@
                       <h6 id="V">V</h6>
                       <hr>
                       <ul class="list-group">
-                        <li><a href="#"></a></li>
+                        <li><a href="animePagesVioletOva.html">Violet Evergarden: Kitto "Ai" wo Shiru Hi ga Kuru no Darou</a></li>
                       </ul>
 
                       <h6 id="W">W</h6>
