--- a/typeMovie.html
+++ b/typeMovie.html
@@ -162,7 +162,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top "
+                                    <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/Kimi_no_nawa.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong></h6>
@@ -170,7 +170,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardMovie -->
@@ -179,7 +179,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top "
+                                    <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/tenki_no_ko.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Tenki no Ko</strong></h6>
@@ -187,7 +187,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardMovie -->
