--- a/typeTv.html
+++ b/typeTv.html
@@ -161,7 +161,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top"
+                                    <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/fly_me_to_moon.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Tonikaku Kawaii</strong>
@@ -170,7 +170,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
@@ -179,7 +179,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top"
+                                    <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/majo_no_tabi.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Majo no Tabitabi</strong>
@@ -188,7 +188,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
@@ -197,7 +197,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top"
+                                    <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/mushoku_tensei.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Mushoku Tensei: Isekai
@@ -207,7 +207,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
@@ -216,7 +216,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top"
+                                    <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/toaru_railgunT.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Toaru Kagaku no
@@ -225,7 +225,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesToaruRailgunT.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
@@ -234,7 +234,7 @@
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div class="card">
                                     <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                                    <a href="animePages.html" class="myshow"><img class="card-img-top"
+                                    <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/horimiya.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
                                             <h6 class="card-title img-overlay-anchor"><strong>Horimiya</strong></h6>
@@ -242,7 +242,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePages.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download"> Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
