commit ReWork Design - Apus sugesti

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <h5 class="h5carousel mx-1">Website Masih Dalam Tahap Beta</h5>
                     <p class="pcarousel mx-1">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
                       mengganggu.
-                      Silahkan berikan laporan bug ke Discord kami atau berikan sugesti, kritik dan saran kalian.
+                      Silahkan berikan laporan bug ke Discord kami atau berikan kritik dan saran kalian.
                       Para admin, programmer dan designer kami terus bekerja keras dalam menyelesaikan website ini.
                       (kalau
                       lagi ga maen genshin impact)</p>
