commit ReWork Design - latest update redesign

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 
               <!-- #Pagination-->
-              <div class="col-12">
+              <div class="col-12 mt-4">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination justify-content-center">
                     <li class="page-item"><a class="page-link">Previous</a></li>
