--- a/listLastestUpdate.html
+++ b/listLastestUpdate.html
@@ -158,7 +158,7 @@
                         <div class="row">
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
@@ -186,7 +186,7 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
@@ -214,7 +214,7 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
@@ -242,7 +242,7 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
@@ -270,7 +270,7 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
@@ -298,63 +298,7 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
-                                <div class="card">
-                                    <a href="">
-                                        <div class="row no-gutters">
-                                            <div class="imgContainer" style="width: 30%; overflow: hidden;">
-                                                <img src="img/Screenshot/Horimiya/Ss1.jpg" style="height: 100px;"
-                                                    alt="...">
-                                                <div class="card-img-overlay anchor-bg-color-update overlay">
-
-                                                </div>
-                                            </div>
-                                            <div style="width: 70%;">
-                                                <div class="card-body cardUpdate">
-                                                    <h6 class="card-title cardUpdate">Toaru Kagaku no Railgun T BD Vol.8
-                                                        Episode 22 –
-                                                        25 Subtitle Indonesia </h6>
-                                                    <p class="card-text "><small class="text-muted">Release : February
-                                                            4th,
-                                                            2021</small></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <!-- #CardUpdate -->
-
-                            <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
-                                <div class="card">
-                                    <a href="">
-                                        <div class="row no-gutters">
-                                            <div class="imgContainer" style="width: 30%; overflow: hidden;">
-                                                <img src="img/Screenshot/Horimiya/Ss1.jpg" style="height: 100px;"
-                                                    alt="...">
-                                                <div class="card-img-overlay anchor-bg-color-update overlay">
-
-                                                </div>
-                                            </div>
-                                            <div style="width: 70%;">
-                                                <div class="card-body cardUpdate">
-                                                    <h6 class="card-title cardUpdate">Toaru Kagaku no Railgun T BD Vol.8
-                                                        Episode 22 –
-                                                        25 Subtitle Indonesia </h6>
-                                                    <p class="card-text "><small class="text-muted">Release : February
-                                                            4th,
-                                                            2021</small></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <!-- #CardUpdate -->
-
-                            <!-- #CardUpdate-->
-                            <div class="col-12 col-md-10 mb-3 offset-0 offset-md-1 updateCard">
+                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 updateCard">
                                 <div class="card">
                                     <a href="">
                                         <div class="row no-gutters">
