commit ReWork Design - fix design update

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                  <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top " src="img/Anime/Kimi_no_nawa.png">
+                  <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong></h6>
                       <small class="text-white">Post on 20-03-2020</small>
@@ -236,7 +237,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top" src="img/Anime/fly_me_to_moon.jpg">
+                  <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/fly_me_to_moon.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Tonikaku Kawaii</strong></h6>
                       <small class="text-white">Post on 23-02-2020</small>
@@ -252,7 +254,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top" src="img/Anime/majo_no_tabi.jpg">
+                  <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/majo_no_tabi.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Majo no Tabitabi</strong></h6>
                       <small class="text-white">Post on 20-02-2020</small>
@@ -268,7 +271,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-danger" href="typeSpecial.html"> Special </a>
-                  <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top " src="img/Anime/violet_ova.png">
+                  <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Violet Evergarden: Kitto "Ai" wo Shiru Hi ga
                           Kuru no Darou</strong></h6>
@@ -285,7 +289,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top" src="img/Anime/mushoku_tensei.png">
+                  <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/mushoku_tensei.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Mushoku Tensei: Isekai Ittara Honki
                           Dasu</strong></h6>
@@ -302,9 +307,10 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top" src="img/Anime/toaru_railgunT.jpg">
+                  <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/toaru_railgunT.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
-                      <h6 class="card-title img-overlay-anchor"><strong>Toaru Kagaku no Railgun</strong></h6>
+                      <h6 class="card-title img-overlay-anchor"><strong>Toaru Kagaku no Railgun T</strong></h6>
                       <small class="text-white">Post on 7-02-2020</small>
                     </div>
                 </div>
@@ -318,7 +324,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
-                  <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top" src="img/Anime/horimiya.jpg">
+                  <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
+                      src="img/Anime/horimiya.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Horimiya</strong></h6>
                       <small class="text-white">Post on 4-02-2020</small>
@@ -334,7 +341,8 @@
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div class="card">
                   <a class="btn btn-success" href="typeMovie.html"> Movie </a>
-                  <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top " src="img/Anime/tenki_no_ko.png">
+                  <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/tenki_no_ko.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Tenki no Ko</strong></h6>
                       <small class="text-white">Post on 1-02-2020</small>
@@ -359,6 +367,104 @@
                 </nav>
               </div>
               <!-- #endPagination -->
+
+
+              <!-- #Anime Latest Update-->
+              <div class="col-12 px-0 py-1 text-justify">
+                <a href="listLastestUpdate.html">
+                  <div class="btn-primary text-center rounded-corner border score mb-1">
+                    Anime Latest Update
+                  </div>
+                </a>
+              </div>
+              <!-- #EndAnime Latest Update-->
+
+              <!-- #CardUpdate-->
+              <div class="col-12 mb-3 rounded-corner">
+                <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
+                <div class="card updateCard">
+                  <a href="">
+                    <div class="row no-gutters">
+                      <div class="imgContainer"  >
+                        <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png" style="height: 100px;">
+                        <div class="card-img-overlay anchor-bg-color-update overlay">
+                        </div>
+                      </div>
+                      <div class="descContainer">
+                        <div class="card-body cardUpdate">
+                          <h6 class="card-title cardUpdate">Kimi No Na wa. 60FPS Movie
+                            Subtitle Indonesia </h6>
+                          <p class="card-text "><small class="text-muted">Release : March
+                              20th, 2021</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <!-- #CardUpdate -->
+
+              <!-- #CardUpdate-->
+              <div class="col-12 mb-3  rounded-corner">
+                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                <div class="card updateCard">
+                  <a href="">
+                    <div class="row no-gutters">
+                      <div class="imgContainer"  >
+                        <img src="img/Screenshot/Tonikawa/Screenshot (103).png" style="height: 100px;">
+                        <div class="card-img-overlay anchor-bg-color-update overlay">
+                        </div>
+                      </div>
+                      <div class="descContainer">
+                        <div class="card-body cardUpdate">
+                          <h6 class="card-title cardUpdate">Tonikaku Kawaii 60FPS Episode 1 -
+                            12 Subtitle Indonesia </h6>
+                          <p class="card-text "><small class="text-muted">Release : february
+                              23th, 2021</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <!-- #CardUpdate -->
+
+              <!-- #CardUpdate-->
+              <div class="col-12 mb-3 rounded-corner">
+                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                <div class="card updateCard">
+                  <a href="">
+                    <div class="row no-gutters">
+                      <div class="imgContainer">
+                        <img src="img/Screenshot/MajoNoTabi/Screenshot (113).png" style="height: 100px;">
+                        <div class="card-img-overlay anchor-bg-color-update overlay">
+                        </div>
+                      </div>
+                      <div class="descContainer">
+                        <div class="card-body cardUpdate">
+                          <h6 class="card-title cardUpdate">Majo no Tabitabi 60FPS Episode 10
+                            - 12 Subtitle Indonesia </h6>
+                          <p class="card-text "><small class="text-muted">Release : february
+                              20th, 2021</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <!-- #CardUpdate -->
+
+              <!-- #Anime Latest Update-->
+              <div class="col-8 offset-2  px-0 py-1 text-justify">
+                <a href="listLastestUpdate.html">
+                  <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
+                    See more..
+                  </div>
+                </a>
+              </div>
+              <!-- #EndAnime Latest Update-->
+
+
 
             </div>
           </div>
