commit ReWork Design - fix Update card Final

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <div class="col-12 mb-3 rounded-corner">
                 <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
                 <div class="card updateCard">
-                  <a href="">
+                  <a href="animePagesKimiNoNawa.html">
                     <div class="row no-gutters">
                       <div class="imgContainer"  >
                         <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png" style="height: 100px;">
@@ -408,7 +408,7 @@
               <div class="col-12 mb-3  rounded-corner">
                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                 <div class="card updateCard">
-                  <a href="">
+                  <a href="animePagesTonikakuKawaii.html">
                     <div class="row no-gutters">
                       <div class="imgContainer"  >
                         <img src="img/Screenshot/Tonikawa/Screenshot (103).png" style="height: 100px;">
@@ -433,7 +433,7 @@
               <div class="col-12 mb-3 rounded-corner">
                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                 <div class="card updateCard">
-                  <a href="">
+                  <a href="animePagesMajoNoTabi.html">
                     <div class="row no-gutters">
                       <div class="imgContainer">
                         <img src="img/Screenshot/MajoNoTabi/Screenshot (113).png" style="height: 100px;">
