--- a/listLastestUpdate.html
+++ b/listLastestUpdate.html
@@ -168,10 +168,10 @@
                             <!-- #EndAnime Latest Update-->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesKimiNoNawa.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png"
@@ -194,10 +194,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesTonikakuKawaii.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/Tonikawa/Screenshot (103).png"
@@ -220,10 +220,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesMajoNoTabi.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/MajoNoTabi/Screenshot (113).png"
@@ -246,12 +246,12 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-danger btn-block" href="typeSpecial.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesVioletOva.html">
                                         <div class="row no-gutters">
-                                            <div class="imgContainer" style="width: 35%; overflow: hidden;">
+                                            <div class="imgContainer">
                                                 <img src="img/Screenshot/VioletOva/Screenshot (343).png"
                                                     style="height: 100px;">
                                                 <div class="card-img-overlay anchor-bg-color-update overlay">
@@ -273,10 +273,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesMushokuTensei.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/MushokuTensei/Screenshot (69).png"
@@ -299,10 +299,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesToaruRailgunT.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/ToaruRailgunT/Screenshot (82).png"
@@ -325,10 +325,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1 rounded-corner">
+                            <div class="col-12 mb-3 rounded-corner">
                                 <a class="btn btn-warning btn-block" href="typeTv.html"></a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesHorimiya.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/Horimiya/Ss1.jpg" style="height: 100px;">
@@ -350,10 +350,10 @@
                             <!-- #CardUpdate -->
 
                             <!-- #CardUpdate-->
-                            <div class="col-12 col-xl-10 mb-3 offset-0 offset-xl-1  rounded-corner">
+                            <div class="col-12 mb-3  rounded-corner">
                                 <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
                                 <div class="card updateCard">
-                                    <a href="">
+                                    <a href="animePagesTenkiNoKo.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/TenkiNoKo/Screenshot (236).png"
